feat(all files): added initial structure to repo

--- a/second.html
+++ b/second.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    <h1>Digital Arts & Technology </h1>
-    <h1>WEB & GRAPHIC DESIGN</h1>
+    <div class="whole-position-container">
+    <div class="half">
+    <div class="content">
+        <div class="content__title"><h1> <b>Digital Arts & Technology </b></h1></div>
+    <div id="web_heading"> <h1>WEB & GRAPHIC</h1> </div>
+    <div id="web_heading"><h1>DESIGN</h1> </div>
     <ul>
         <li>Master foundational design principles</li>
         <li>Design websites layouts, business logos, posters, stickers + more</li>
@@ -17,36 +21,42 @@
         <li>Explore industry level software</li>
  
     </ul>
+    <div class="schedule">
     <h3>Schedule</h3>
-    <ul>
-        <li>Fall: Intoduction to Video/Editing</li>
-        <li>Sprint: Intermediate Video/Editing</li>
-        <li>Summer: Production/Post-Production</li>
-
-    </ul>
+    <span> <img src="images/leaf.png">  Fall: Intoduction to Design</span>
+    <br>
+    <span> <img src="images/flower.png"> Spring: Introduction to UX/UI</span>
+    <br>
+    <span> <img src="images/sun.png"> Summer: Design Project</span>
+    
     <h3>Potential Careers</h3>
+    </div>
     <!-- move the divs next to each other?  -->
-     <!-- adding a new dev for the list -->
-    <div>
-        <ul>
-            <li>Video Editor</li>
-            <li>Cinematographer</li>
-            <li>Producer</li>
-            <li>Production Assistant</li>
+     <!-- adding a new div for the list -->
+     <div class="lists list-position-container">
+        <ul >
+            <li>UX/UI Designer</li>
+            <li>Graphic Designer</li>
+            <li>Web Designer</li>
         </ul>
-    </div>
-    <!-- making a new div to keep aligment of the list -->
-    <div>
         <ul>
-            <li>Camera Operator</li>
-            <li>Broadcasting</li>
-            <li>Video Advertising</li>
+            <li>Production Artist</li>
+            <li>Branding Specialist</li>
         </ul>
+    </div> 
     </div>
-    <div class="initial_photo">
-        <img src="second_page.png" alt="first"class="images">
+</div>
+
+    <div class="text_photo position-container">
+        <img src="images/second_page.png" alt="first"class="images">
     </div>
+
+    <!-- everything -->
+</div>
+
     <!-- add slider at the bottom  -->
+    <a href="index.html" id="video_bottom_text">< Video Production</a>
+
 </body>
 
 </html>
